# macrocommand

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  adaptors.cpp  adaptors.h  commands.h  fuel_adaptors.cpp  fuel_adaptors.h  fuel_commands.cpp  fuel_commands.h  fuel_interfaces.cpp  fuel_interfaces.h  interfaces.h  starship.h
tests/: tests.cpp
